<resources>
    <string name="app_name">IntelTrack</string>
    <string name="cargando">Cargando..</string>
    <string name="esperaunmomento">Espera un momento por favor...</string>
    <string name="usuario">Email</string>
    <string name="bienvenido">Bienvenido, %1$s</string>
    <string name="clave">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrarse">Registrarse</string>
    <string name="camposobligatorios">Todos los campos son obligatorios</string>
    <string name="usuarioobligatorio">Email invalido, es obligatorio</string>
    <string name="claveobligatoria">La clave es obligatoria</string>
    <string name="conexioninternet">No tienes conexion al servidor, verifica tus datos.</string>
    <string name="conectandoservidor">Buscando conexión con el servidor...</string>
    <string name="errorconsultarws">Error al consultar ws, error: %i</string>
    <string name="errorconsultarwsstring">Error al consultar ws, error: %s</string>
    <string name="main.menu.action.logout">Cerrar sesión</string>
    <string name="nombrecliente">Nombre del cliente</string>
    <string name="flota">Nombre de flota</string>
    <string name="placa">Placa 666</string>
    <string name="irwaze">Ir con Waze</string>
    <string name="irmaps">Ir con Maps</string>
    <string name="clientes">Clientes</string>
    <string name="vehiculos">Vehiculos</string>
    <string name="nodata">No existe información de este vehiculo</string>
    <string name="buscar">Buscar</string>
    <string name="nombregrupo">Nombre del grupo</string>
    <string name="nombrevehiculo">Nombre del vehiculo</string>
    <string name="cerrarsesion">Cerrar sesión</string>
    <string name="revisatusdatos">Comprueba tus datos, error al iniciar sesión</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="activos">Activos</string>
    <string name="inactivos">Inactivos</string>
    <string name="ultimaactualizacion">Última actualización: %s</string>

    <string name="title_activity_splash">Splash</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="velocidad">Velocidad: %s KM/H</string>
</resources>
