<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="@dimen/paddingMed"
    android:layout_marginRight="@dimen/paddingMed"
    android:layout_marginLeft="@dimen/paddingMed"
    android:layout_marginStart="@dimen/paddingMed"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="#fff"
        card_view:cardElevation="3dp"
        card_view:cardUseCompatPadding="true"
        card_view:cardCornerRadius="6dp"
        card_view:cardPreventCornerOverlap="false"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/paddingMed">

            <TextView
                android:id="@+id/txtPlaca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placa"
                android:textColor="@color/colorPrimaryText"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txtCliente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/txtPlaca"
                android:text="@string/nombrecliente"
                android:textColor="@color/colorSecondaryText"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txtGrupo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtCliente"
                android:text="@string/nombregrupo"
                android:textColor="@color/colorSecondaryText"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txtVehiculo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtGrupo"
                android:text="@string/nombrevehiculo"
                android:textColor="@color/colorSecondaryText"
                android:textSize="14sp" />

            <View
                android:id="@+id/viewdivisor"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/txtVehiculo"
                android:layout_marginBottom="@dimen/paddingMin"
                android:layout_marginTop="@dimen/paddingMin"
                android:background="@color/colorDivider" />

            <TextView
                android:id="@+id/txtMaps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/viewdivisor"
                android:layout_toStartOf="@+id/txtWaze"
                android:layout_toLeftOf="@+id/txtWaze"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:drawablePadding="@dimen/paddingMed"
                android:drawableStart="@drawable/ic_maps"
                android:drawableLeft="@drawable/ic_maps"
                android:focusable="true"
                android:gravity="center"
                android:padding="@dimen/paddingMed"
                android:text="@string/irmaps"
                android:textColor="@color/colorPrimaryText"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtWaze"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/viewdivisor"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:drawablePadding="@dimen/paddingMed"
                android:drawableStart="@drawable/ic_waze"
                android:drawableLeft="@drawable/ic_waze"
                android:focusable="true"
                android:gravity="center"
                android:padding="@dimen/paddingMed"
                android:text="@string/irwaze"
                android:textColor="@color/colorPrimaryText"
                android:textSize="14sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>